[gd_scene load_steps=4 format=3 uid="uid://co0k57todmor0"]

[ext_resource type="Script" path="res://tools/drink_design_tool.gd" id="1_hd7dg"]

[sub_resource type="LabelSettings" id="LabelSettings_lry4g"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_v36dn"]

[node name="DrinkDesignTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hd7dg")

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(392, 159)
unresizable = true
ok_button_text = "Save"
root_subfolder = "data/brewing_system/recipes"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "v 1.0"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Ferramenta de design de drinks"
label_settings = SubResource("LabelSettings_lry4g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.1
offset_top = 20.0
offset_bottom = 60.0

[node name="New" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Novo"

[node name="Load" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Carregar"

[node name="Save" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Salvar"

[node name="LeftColumn" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 40.0
offset_right = -20.0
offset_bottom = -40.0
theme_override_constants/separation = 10

[node name="DrinkNameLabel" type="Label" parent="LeftColumn"]
layout_mode = 2
text = "--- Nome do drink"

[node name="DrinkName" type="LineEdit" parent="LeftColumn" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Nome aqui"

[node name="HSeparator" type="HSeparator" parent="LeftColumn"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DrinkImageLabel" type="Label" parent="LeftColumn"]
layout_mode = 2
text = "--- Imagem do drink (ainda n√£o implementado)"

[node name="DrinkImageButton" type="Button" parent="LeftColumn"]
layout_mode = 2
size_flags_vertical = 3
disabled = true

[node name="DrinkImage" type="TextureRect" parent="LeftColumn/DrinkImageButton" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.9
offset_right = 4.0
offset_bottom = 40.0

[node name="RightColumn" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_constants/separation = 10

[node name="IngredientsLabel" type="Label" parent="RightColumn"]
layout_mode = 2
text = "--- Ingredientes:"
label_settings = SubResource("LabelSettings_v36dn")

[node name="BaseLabel" type="Label" parent="RightColumn"]
layout_mode = 2
text = "Base"

[node name="BaseIngredient" type="OptionButton" parent="RightColumn" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 2

[node name="Ing1Label" type="Label" parent="RightColumn"]
layout_mode = 2
text = "Extra 1"

[node name="ExtraIngredient1" type="OptionButton" parent="RightColumn" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
popup/item_0/text = "--- nenhum ---"
popup/item_0/id = 0

[node name="Ing2Label" type="Label" parent="RightColumn"]
layout_mode = 2
text = "Extra 2"

[node name="ExtraIngredient2" type="OptionButton" parent="RightColumn" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 2
disabled = true
item_count = 1
popup/item_0/text = "--- nenhum ---"
popup/item_0/id = 0

[node name="HSeparator" type="HSeparator" parent="RightColumn"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AspectsLabel" type="Label" parent="RightColumn"]
layout_mode = 2
text = "--- Aspecto:"

[node name="AspectDetails" type="Label" parent="RightColumn" groups=["tool_field"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
[connection signal="pressed" from="Buttons/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="text_changed" from="LeftColumn/DrinkName" to="." method="_on_drink_name_text_changed"]
[connection signal="item_selected" from="RightColumn/BaseIngredient" to="." method="_on_base_ingredient_item_selected"]
[connection signal="item_selected" from="RightColumn/ExtraIngredient1" to="." method="_on_extra_ingredient_1_item_selected"]
[connection signal="item_selected" from="RightColumn/ExtraIngredient2" to="." method="_on_extra_ingredient_2_item_selected"]
